alignment issues with the .img-wrapper

--- a/project2/styles.css
+++ b/project2/styles.css
@@ -88,7 +88,7 @@ li+li {
 
 .read-more {
     height: 59px;
-    left: 295px;
+    left: 295alipx;
     position: absolute;
     top: 420px;
     width: 59px;
